2011-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: avoid few more spurious failures
	* tests/depmod-data.test: Use creative quoting to avoid
	spuriously triggering the `sc_tests_Exit_not_exit' maintainer
	check.  Commit `v1.11-900-g3453b8e' attempted to fix it, but
	succeeded only partially.
	* tests/cond33.test: Fix header comments, not to reference
	obsolescent make variable `$(mkdir_p)'.
	* tests/cond4.test: Rewrite "$MAKE exp=..." as "exp=.. $MAKE -e",
	to please `sc_tests_overriding_macros_on_cmdline'
	* tests/cond19.test: Likewise.
	* tests/cond32.test: Likewise.
	* tests/add-missing.test: Use "AUTOMAKE_fails" instead of
	"$AUTOMAKE ... && Exit 1", to please `sc_tests_automake_fails'.

2011-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: avoid few spurious failures
	* Makefile.am (sc_tests_plain_aclocal, sc_tests_plain_perl,
	sc_tests_plain_autoconf, sc_tests_plain_automake,
	sc_tests_plain_autoupate): Be stricter in matching an erroneous
	literal command, i.e., `aclocal', `automake', `perl', etc.

2011-06-20  Bert Wesarg <bert.wesarg@googlemail.com>  (tiny change)

	check: don't use multi-line coloring for the report
	"less -R" can't handle multi-line coloring as it is done for the
	check reports of the serial and parallel testsuite, because of
	performance reasons.  Thus, color each line of the check report
	by its own.
	* lib/am/check.am (am__text_box): Accept colors for lines, and
	color each line by its own.
	[%?PARALLEL_TESTS%] $(TEST_SUITE_LOG): Let am__text_box handle
	the line coloring.
	[!%?PARALLEL_TESTS%] $(check-TESTS): Color each report line by
	its own.
	* THANKS: Update.

2011-06-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: AM_DISTCHECK_CONFIGURE_FLAGS is for corner cases
	* doc/automake.texi (Checking the Distribution): Explain that the
	developers should take care of making their code buildable without
	requiring any special configure options, so that in general