@@ -1,3 +1,10 @@
+2011-06-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix an incomplete comment
+	* tests/subst-no-trailing-empty-line.test: Fix an incomplete
+	comment, and move it to a more proper place.  Minor cosmetic
+	fixes to other comments.
+
 2011-06-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	maintcheck: avoid few more spurious failures
